--- a/apps.json
+++ b/apps.json
@@ -4178,7 +4178,7 @@
     ]
   },  
   {
-    "id": "snifu2clk",
+    "id": "snifu2",
     "name": "Snifu's Analog Clock",
     "version": "0.01",
     "description": "New clock.",
